<resources>
    <string name="app_name">MovieDB PI</string>
    <string name="activity_home_svSearchMovie_hint">Pesquisar por um filme...</string>
    <string name="activity_home_tblMenu_showAllMovies">Todos os filmes</string>
    <string name="activity_home_tblMenu_showFavoriteMovies">Favoritos</string>
    <string name="activity_movie_detail_fixedTextUserRating">Avaliação \ndos usuários</string>
    <string name="activity_movie_detail_fixedTextOverview">Sinopse</string>
    <string name="activity_movie_detail_fixedTextCast">Elenco</string>
    <string name="activity_home_searchTitle">Modo pesquisa</string>
    <string name="activity_home_btnReturn">Voltar ao início</string>
    <string name="activity_home_search_movie_not_found">Esse filme não existe</string>
    <string name="activity_home_search_movie_not_found_body">Não conseguimos encontrar o filme que você procura.\nPor favor, refaça sua busca.</string>
    <string name="activity_request_failed_header">O sistema falhou</string>
    <string name="activity_request_failed_body">Por algum motivo, não foi possível processar com essa solicitação. Por favor, tente novamente.</string>
    <string name="activity_request_try_again">Tentar novamente</string>



</resources>