<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <ImageButton
        android:id="@+id/btnExitErrorScreen"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_exit"
        android:layout_marginTop="@dimen/large_dp"
        android:layout_marginEnd="@dimen/large_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMovieNotFound"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="@dimen/xxlarge_dp"
        android:src="@drawable/connection_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHeader"
        style="@style/TxtItemMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_dp"
        android:text="@string/activity_request_failed_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgMovieNotFound" />

    <TextView
        android:id="@+id/textView"
        style="@style/TxtItemMovieDetailInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xsmall_dp"
        android:gravity="center"
        android:text="@string/activity_request_failed_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader" />

    <TextView
        android:id="@+id/btnTryAgain"
        style="@style/TxtItemMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:text="@string/activity_request_try_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rectangle"
        android:layout_marginBottom="@dimen/xxlarge_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTryAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>