<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MovieDetailActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color">

    <ImageButton
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dp"
        android:layout_marginTop="@dimen/small_dp"
        android:elevation="@dimen/small_dp"
        android:src="@drawable/ic_return"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgMovieDetailPoster"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/movie_1"/>
    
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewUserRating"
        android:layout_width="140dp"
        android:layout_height="75dp"
        style="@style/MovieDetailActivityCardCorners"
        app:cardElevation="@dimen/small_dp"
        app:layout_constraintTop_toBottomOf="@id/imgMovieDetailPoster"
        app:layout_constraintBottom_toBottomOf="@id/imgMovieDetailPoster"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imgMovieDetailStarIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_rating"
        android:elevation="@dimen/small_dp"
        android:layout_marginStart="@dimen/small_dp"
        app:layout_constraintStart_toStartOf="@id/cardViewUserRating"
        app:layout_constraintTop_toTopOf="@id/cardViewUserRating"
        app:layout_constraintBottom_toBottomOf="@id/cardViewUserRating"/>

    <TextView
        android:id="@+id/txtMovieDetailUserRating"
        style="@style/TxtItemUserRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_dp"
        android:layout_marginBottom="@dimen/large_dp"
        android:elevation="@dimen/medium_dp"
        app:layout_constraintBottom_toBottomOf="@id/cardViewUserRating"
        app:layout_constraintEnd_toEndOf="@id/cardViewUserRating"
        app:layout_constraintStart_toStartOf="@id/cardViewUserRating"
        app:layout_constraintTop_toTopOf="@id/cardViewUserRating"
        tools:text="81%" />

    <TextView
        android:id="@+id/fixedTxtMovieDetailRating"
        style="TxtMovieDetailFixedTextRating"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/medium_dp"
        android:text="@string/activity_movie_detail_fixedTextUserRating"
        android:layout_marginEnd="@dimen/large_dp"
        android:layout_marginBottom="@dimen/xsmall_dp"
        app:layout_constraintBottom_toBottomOf="@id/cardViewUserRating"
        app:layout_constraintStart_toStartOf="@id/txtMovieDetailUserRating"
        app:layout_constraintTop_toBottomOf="@id/txtMovieDetailUserRating" />

    <TextView
        android:id="@+id/txtMovieDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TxtItemMovieName"
        android:ellipsize="end"
        android:maxWidth="300dp"
        android:maxLines="1"
        android:layout_marginTop="@dimen/xsmall_dp"
        android:layout_marginStart="@dimen/large_dp"
        tools:text="Ford vs Ferrari"
        app:layout_constraintTop_toBottomOf="@id/cardViewUserRating"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/btnFavoriteIconDetailActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart_favorites_unselected"
        android:backgroundTint="@color/background_color"
        android:layout_marginEnd="@dimen/medium_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewUserRating" />

    <TextView
        android:id="@+id/txtMovieDetailYear"
        style="@style/TxtItemMovieDetailInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xsmall_dp"
        app:layout_constraintStart_toStartOf="@id/txtMovieDetailTitle"
        app:layout_constraintTop_toBottomOf="@id/txtMovieDetailTitle"
        tools:text="2019" />

    <TextView
        android:id="@+id/txtMovieDetailMovieRating"
        style="@style/TxtItemMovieDetailInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xsmall_dp"
        android:layout_marginStart="@dimen/medium_dp"
        app:layout_constraintStart_toEndOf="@+id/txtMovieDetailYear"
        app:layout_constraintTop_toBottomOf="@id/txtMovieDetailTitle"
        tools:text="PG-13" />

    <TextView
        android:id="@+id/txtMovieDetailRuntime"
        style="@style/TxtItemMovieDetailInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xsmall_dp"
        android:layout_marginStart="@dimen/medium_dp"
        app:layout_constraintStart_toEndOf="@+id/txtMovieDetailMovieRating"
        app:layout_constraintTop_toBottomOf="@id/txtMovieDetailTitle"
        tools:text="2h 32min" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGenresMovieDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/small_dp"
        android:layout_marginTop="@dimen/xsmall_dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMovieDetailRuntime"
        tools:listitem="@layout/item_genre_movie_detail" />

    <TextView
        android:id="@+id/txtMovieDetailOverviewTitle"
        style="@style/TxtItemMovieDetailHeading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_dp"
        android:layout_marginTop="@dimen/small_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvGenresMovieDetail"
        android:text="@string/activity_movie_detail_fixedTextOverview" />

    <TextView
        android:id="@+id/txtMovieDetailOverview"
        style="@style/TxtItemMovieDetailInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_dp"
        android:layout_marginEnd="@dimen/large_dp"
        android:layout_marginTop="@dimen/xsmall_dp"
        app:layout_constraintStart_toStartOf="@+id/txtMovieDetailOverviewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMovieDetailOverviewTitle"
        tools:text="American car designer Carroll Shelby and driver Kn Miles battle corporate interference and the laws of physics to build a revolutionary race car for Ford in order." />

    <TextView
        android:id="@+id/txtMovieDetailCast"
        style="@style/TxtItemMovieDetailHeading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_dp"
        android:layout_marginTop="@dimen/small_dp"
        android:text="@string/activity_movie_detail_fixedTextCast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMovieDetailOverview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCastMovieDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_dp"
        android:layout_marginTop="@dimen/xsmall_dp"
        android:layout_marginBottom="@dimen/xsmall_dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMovieDetailCast"
        tools:listitem="@layout/item_cast" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>